[package]
name = "predx"
version = "0.1.0"
edition = "2024"

description = "Cross-search prediction markets (Polymarket & Kalshi)"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
